Tests/Negative/NothAsVariableType.mr
fun main(): i32 {
    var x: noth; // Error: Variable cannot have type 'noth'
    return 0;
}
